fix z-index

--- a/components/Navbar/Navbar.css
+++ b/components/Navbar/Navbar.css
@@ -29,7 +29,7 @@
   border-radius: 5px;
   background-color: var(--text-color);
   transition: all .3s ease;
-  z-index: 11;
+  z-index: 999;
 }
 
 .burger div:nth-child(2) {
@@ -43,7 +43,7 @@
   transform: translateX(0%);
   box-shadow: -3px 0 15px rgba(0, 0, 0, 0.3);
   background-color: var(--bg-color);
-  z-index: 10;
+  z-index: 998;
 }
 
 .burger.toggle {
